<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.BeerInfoActivity">


        <ImageView
            android:id="@+id/ivBeer"
            android:layout_width="120dp"
            android:layout_height="240dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivFavourite"
            android:layout_width="32dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/beerglassoff" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:textColor="@color/my_primary_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
            app:layout_constraintStart_toEndOf="@+id/ivBeer"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hardcore IPA" />

        <TextView
            android:id="@+id/tvTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/my_secondary_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tvIbuLabel"
            app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
            app:layout_constraintStart_toEndOf="@+id/ivBeer"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="Explicit Imperial Ale. Citrusy. Resinous. Intense." />

        <TextView
            android:id="@+id/tvAbvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abvLabel"
            android:textColor="@color/my_secondary_text"
            android:textSize="16sp"
            android:tooltipText="@string/avgToolTip"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/ivBeer"
            tools:text="ABV: " />

        <TextView
            android:id="@+id/tvAbv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/my_primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/tvAbvLabel"
            tools:text="9.2 %" />

        <TextView
            android:id="@+id/tvIbuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ibuLabel"
            android:textColor="@color/my_secondary_text"
            android:textSize="16sp"
            android:tooltipText="@string/ibuTooltip"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/tvIbu"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tvAbv"
            tools:text="IBU: " />

        <TextView
            android:id="@+id/tvIbu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/my_primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/tvOgLabel"
            app:layout_constraintStart_toEndOf="@id/tvIbuLabel"
            tools:text="125" />

        <TextView
            android:id="@+id/tvOgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ogLabel"
            android:textColor="@color/my_secondary_text"
            android:textSize="16sp"
            android:tooltipText="@string/ogTooltip"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/tvOg"
            tools:text="OG: " />

        <TextView
            android:id="@+id/tvOg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/my_primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12.5 %" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <ImageView
            android:id="@+id/ivHops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_hops"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIbuLabel" />

        <TextView
            android:id="@+id/tvHopsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/hopsLabel"
            android:textColor="@color/my_primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivHops"
            app:layout_constraintTop_toTopOf="@+id/ivHops"
            tools:text="HOPS" />

        <ImageView
            android:id="@+id/ivMalts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_malts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHops" />

        <TextView
            android:id="@+id/tvHops"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivHops"
            app:layout_constraintTop_toBottomOf="@+id/tvHopsLabel"
            tools:text="Extra Pale, Caramalt, Crystal 150" />

        <TextView
            android:id="@+id/tvMaltsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/maltsLabel"
            android:textColor="@color/my_primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivMalts"
            app:layout_constraintTop_toTopOf="@+id/ivMalts"
            tools:text="MALTS" />

        <TextView
            android:id="@+id/tvMalts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMalts"
            app:layout_constraintTop_toBottomOf="@+id/tvMaltsLabel"
            tools:text="Columbus Extract, Columbus, Centennial, Simcoe, Amarillo" />

        <ImageView
            android:id="@+id/btnFavourite"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>